k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-nodejs-app
spec:
  replicas: 2 # Number of pod: replicas
  selector:
    matchLabels:
      app: sample-nodejs-app
  template:
    metadata:
      labels:
        app: sample-nodejs-app
    spec:
      containers:
      - name: sample-nodejs-app
        image: venkatesh1409/sample-nodejs-app:v3
        # command: ["sleep", "notanumber"] # This will cause the pod to crash
        ports:
        - containerPort: 3000
