k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodejs-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: sample-nodejs-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
