k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodejs-nodeport
spec:
  type: NodePort
  selector:
    app: sample-nodejs-app
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30080
