k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-nodejs-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http: 
      paths:
      - backend:
          service:
            name: sample-nodejs-service
            port:
              number: 3004
        path: /
        pathType: Prefix
      # - backend:
      #     service:
      #       name: sample-nodejs-service
      #       port:
      #         number: 3004
      #     path: /api
      #   pathType: Prefix
